--- a/项目和坑.md
+++ b/项目和坑.md
@@ -1,4 +1,5 @@
 #项目和坑
+##list的坑
 
 ```golang
 package main  
@@ -29,4 +30,6 @@ for e := l.Front(); e != nil; e = e.Next()
 fmt.Println(e.Value) 
 } 
 }
-```
+```  
+##time的坑  
+
