--- a/项目和坑.md
+++ b/项目和坑.md
@@ -46,3 +46,25 @@ fmt.Println(t.Format("2006-01-02 15:04:05"))
 }
 ```
 ##闭包的坑
+  
+```
+ package main 
+import ( 
+"fmt"
+ )
+ func main() {
+ values := []string{"a", "b", "c"} 
+for _, v := range values { 
+/*go func() { 
+fmt.Println(v) //通过闭包传递了v的引用 
+}()*/ 
+go func(u string) { 
+fmt.Println(u) //直接传参 
+}(v) 
+} 
+var input string
+ fmt.Scanln(&input) 
+fmt.Println("done") 
+}
+
+```
