--- a/项目和坑.md
+++ b/项目和坑.md
@@ -33,7 +33,7 @@ fmt.Println(e.Value)
 ```  
 ##time的坑  
 
-```  
+```golang   
  package main 
 import ( 
 "fmt" 
@@ -47,7 +47,7 @@ fmt.Println(t.Format("2006-01-02 15:04:05"))
 ```
 ##闭包的坑
   
-```
+```golang 
  package main 
 import ( 
 "fmt"
