--- a/项目和坑.md
+++ b/项目和坑.md
@@ -1,5 +1,6 @@
-#项目和坑
-##list的坑
+# 项目和坑
+
+## list的坑
 
 ```golang
 package main  
@@ -30,10 +31,11 @@ for e := l.Front(); e != nil; e = e.Next()
 fmt.Println(e.Value) 
 } 
 }
-```  
-##time的坑  
+```
 
-```golang   
+## time的坑
+
+```golang
  package main 
 import ( 
 "fmt" 
@@ -45,9 +47,10 @@ t := time.Now()
 fmt.Println(t.Format("2006-01-02 15:04:05")) 
 }
 ```
-##闭包的坑
-  
-```golang 
+
+## 闭包的坑
+
+```golang
  package main 
 import ( 
 "fmt"
@@ -69,9 +72,9 @@ fmt.Println("done")
 
 ```
 
-##变参合匿名函数写法  
+## 变参合匿名函数写法
 
- ```golang
+```golang
     /** 
     * Created by Administrator on 13-12-18. 
     */ 
@@ -105,3 +108,10 @@ fmt.Println("done")
     fmt.Fprintf(os.Stdout, "x = %d y = %d\n", x, y) 
     }
 ```
+
+**显示标题**
+
+``` golang 
+
+```
+
