--- a/条件编译.md
+++ b/条件编译.md
@@ -3,4 +3,31 @@
 例如
 main_win.go 和main_linux.go
 ##注释条件编译
+```
+// +build debug
 
+
+
+package main
+
+
+
+import (
+
+"fmt"
+
+)
+
+
+
+func Debug() {
+
+fmt.Println("This is Debug info")
+
+}
+
+
+
+L
+
+```
