--- a/条件编译.md
+++ b/条件编译.md
@@ -3,14 +3,10 @@
 例如
 main_win.go 和main_linux.go
 ##注释条件编译
-```
+```golang
 // +build debug
 
-
-
 package main
-
-
 
 import (
 
@@ -18,16 +14,10 @@ import (
 
 )
 
-
-
 func Debug() {
 
 fmt.Println("This is Debug info")
 
 }
-
-
-
-L
 
 ```
