--- a/条件编译.md
+++ b/条件编译.md
@@ -21,3 +21,30 @@ fmt.Println("This is Debug info")
 }
 
 ```
+
+`
+// +build !debug
+
+
+
+package main
+
+
+
+import (
+
+"fmt"
+
+)
+
+
+
+func Debug() {
+
+fmt.Println("This is release info")
+
+}
+
+
+
+`
