--- a/条件编译.md
+++ b/条件编译.md
@@ -3,6 +3,7 @@
 例如
 main_win.go 和main_linux.go
 ##注释条件编译
+logger_debug.go
 ```golang
 // +build debug
 
@@ -21,6 +22,7 @@ fmt.Println("This is Debug info")
 }
 
 ```
+logger_protuct.go
 
 `
 // +build !debug
