--- a/条件编译.md
+++ b/条件编译.md
@@ -24,7 +24,7 @@ fmt.Println("This is Debug info")
 ```
 logger_protuct.go
 
-`
+```golang
 // +build !debug
 
 
@@ -49,4 +49,4 @@ fmt.Println("This is release info")
 
 
 
-`
+```
