--- a/条件编译.md
+++ b/条件编译.md
@@ -1,10 +1,15 @@
-#条件编译
-##1.文件名后缀，适用于跨平台
+# 条件编译
+
+## 1.文件名后缀，适用于跨平台
+
 例如
-main_win.go 和main_linux.go
-##注释条件编译
-logger_debug.go
-```golang
+main\_win.go 和main\_linux.go
+
+## 2.注释条件编译
+
+logger\_debug.go
+
+```go
 // +build debug
 
 package main
@@ -22,9 +27,10 @@ fmt.Println("This is Debug info")
 }
 
 ```
-logger_protuct.go
 
-```golang
+logger\_protuct.go
+
+```go
 // +build !debug
 
 package main
@@ -44,7 +50,8 @@ fmt.Println("This is release info")
 ```
 
 main.go
-```golang
+
+```go
 package main
 
 func main() {
@@ -54,10 +61,13 @@ Debug()
 }
 
 ```
-readme.md  
+
+readme.md
+
 ```shell
 go build -tags "debug"
 
 go build -tags "!debug"
 
 ```
+
